Fix collapsing editor text on small screens
It's not proportional to screen width just like everything else.

--- a/styles/styleFinal.css
+++ b/styles/styleFinal.css
@@ -70,7 +70,7 @@ body {
 }
 
 #code-box span {
-  margin: -2px;
+  margin: -0.13vw;
 }
 
 #code-box .separated-right {
